...
    <string name="title_edit_account">Edit Account</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="description_view_account_icon">View account details</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="label_account_name">Account name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_test">Test</string>
    <string name="label_passcode">Enter Passcode</string>
    <string name="toast_wrong_passcode">Wrong passcode, please try again</string>
    <string name="toast_passcode_set">Passcode set</string>
    <string name="label_confirm_passcode">Please confirm your passcode</string>
    <string name="toast_invalid_passcode_confirmation">Invalid passcode confirmation. Please try again</string>
...
    <string name="title_export_dialog">Export Transactions</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="toast_export_error">Error exporting %1$s file</string>
    <string name="btn_export">Export</string>
    <string name="option_delete_after_export">Delete transactions after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="title_settings">Settings</string>
    <string-array name="export_destinations">
        <item>Save As&#8230;</item>
        <item>Dropbox</item>
        <item>ownCloud</item>
        <item>Send to&#8230;</item>
    </string-array>
...
    <string name="label_delete_account_transactions_description">This account contains transactions. \nWhat would you like to do with these transactions</string>
    <string name="label_delete_account_subaccounts_description">This account contains sub-accounts. \nWhat would you like to do with these sub-accounts</string>
    <string name="label_delete_transactions">Delete transactions</string>
    <string name="toast_disable_double_entry_to_save_transaction">Create and specify a transfer account OR disable double-entry in settings to save the transaction</string>
    <string name="label_tap_to_create_schedule">Tap to create schedule</string>
    <string name="title_restore_backup">Restore Backup…</string>
    <string name="header_backup_and_export_settings">Backup &amp; export</string>
    <string name="title_dropbox_sync_preference">Enable DropBox</string>
    <string name="title_owncloud_sync_preference">Enable ownCloud </string>
    <string name="title_backup_preference_category">Backup</string>
    <string name="summary_dropbox_sync">Enable exporting to DropBox</string>
    <string name="summary_owncloud_sync">Enable exporting to ownCloud</string>
    <string name="title_backup_prefs">Backup Preferences</string>
    <string name="title_create_backup_pref">Create Backup</string>
    <string name="summary_create_backup_pref">Create a backup of the active book</string>
    <string name="summary_restore_backup_pref">Restore most recent backup of active book</string>
    <string name="toast_backup_successful">Backup successful</string>
    <string name="toast_backup_failed">Backup failed</string>
    <string name="export_warning_xml">Exports all accounts and transactions</string>
    <string name="toast_install_file_manager">Install a file manager to select files</string>
    <string name="title_select_backup_to_restore">Select backup to restore</string>
    <string name="nav_menu_favorites">Favorites</string>
    <string name="nav_menu_open">Open…</string>
...
    <string name="toast_legend_too_long">The legend is too long</string>
    <string name="hint_account_description">Account description</string>
    <string name="label_no_recent_accounts">No recent accounts</string>
    <string name="label_no_favorite_accounts">No favorite accounts</string>
    <string name="nav_menu_scheduled_actions">Scheduled Actions</string>
    <string name="label_scheduled_action_ended">"Ended, last executed on %1$s"</string>
    <string name="review">Review</string>
    <string name="btn_wizard_next">Next</string>
    <string name="btn_wizard_finish">Done</string>
    <string name="wizard_title_default_currency">Default Currency</string>
    <string name="wizard_title_account_setup">Account Setup</string>
    <string name="wizard_title_select_currency">Select Currency</string>
    <string name="wizard_title_feedback_options">Feedback Options</string>
    <string name="wizard_option_create_default_accounts">Create default accounts</string>
    <string name="wizard_option_import_my_accounts">Import my accounts</string>
    <string name="wizard_option_let_me_handle_it">Let me handle it</string>
    <string name="wizard_option_currency_other">Other…</string>
    <string name="wizard_option_auto_send_crash_reports">Automatically send crash reports</string>
    <string name="wizard_option_disable_crash_reports">Disable crash reports</string>
    <string name="wizard_btn_back">Back</string>
    <string name="title_setup_gnucash">Setup GnuCash</string>
    <string name="wizard_title_welcome_to_gnucash">Welcome to GnuCash</string>
    <string name="msg_wizard_welcome_page">Before you dive in, \nlet\'s setup a few things first\n\nTo continue, press Next</string>
    <string name="title_split_editor">Split Editor</string>
    <string name="toast_error_check_split_amounts">Check that all splits have valid amounts before saving!</string>
...
