...
                <TextView android:id="@+id/to_currency"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    tools:text="EUR"/>
            </TableRow>

            <TextView
                android:padding="@dimen/dialog_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
